--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world! new</h1>
-    <h2>nature mother</h2>
+    <h1>Hello, world </h1>
+    <h2>nature mother </h2>
+    <h3>chat module</h3>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
